# ebbinghaus-reviewer

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  verify.yml
Review_Reminder/: App.xaml.cs  MainWindow.xaml.cs
Review_Reminder/MVVM/Model/: EbbinghausCurve.cs
Review_Reminder/MVVM/View/: CalendarView.xaml  InformationView.xaml  InformationView.xaml.cs  ReviewSystemView.xaml  ToDoListView.xaml  ToDoListView.xaml.cs  TodolistReminder.xaml
Review_Reminder/MVVM/ViewModel/: CalendarViewModel.cs  InformationViewModel.cs  ReviewSystemViewModel.cs
Review_Reminder/Services/: NotificationService.cs  ReviewScheduler.cs
archive/: README.md  Review_Reminder.sln
archive/Review_Reminder/: App.xaml  MainWindow.xaml  Review_Reminder.csproj
archive/Review_Reminder/MVVM/Model/: ReviewItem.cs  ReviewSchedule.cs
archive/Review_Reminder/MVVM/View/: CalendarView.xaml.cs  HomeView.xaml  HomeView.xaml.cs  ReviewSystemView.xaml.cs  TodolistReminder.xaml  TodolistReminder.xaml.cs
archive/Review_Reminder/MVVM/ViewModel/: BaseViewModel.cs  HomeViewModel.cs  MainViewModel.cs  ToDoListViewModel.cs
archive/Review_Reminder/Services/: INotificationService.cs  IReviewScheduler.cs
archive/Review_Reminder/Theme/: MenuButtonTheme.xaml
archive/build-artifacts/: README.md
archive/build-artifacts/obj-Release/: MainWindow.g.i.cs  Review_Reminder.g.resources  Review_Reminder_Content.g.i.cs  Review_Reminder_MarkupCompile.i.cache  Review_Reminder_MarkupCompile.i.lref
archive/build-artifacts/obj-Release/MVVM/View/: TodolistReminder.baml  listboxitemlist.g.cs
build-artifacts/obj-Release/: App.baml  App.g.i.cs  DesignTimeResolveAssemblyReferencesInput.cache  MainWindow.baml  Review_Reminder.csproj.CoreCompileInputs.cache  Review_Reminder.csproj.FileListAbsolute.txt  Review_Reminder.csproj.GenerateResource.cache  Review_Reminder.csprojAssemblyReference.cache  Review_Reminder_MarkupCompile.cache  Review_Reminder_MarkupCompile.lref
build-artifacts/obj-Release/MVVM/View/: CalendarView.baml  CalendarView.g.cs  CalenderView.g.cs  HomeView.baml  HomeView.g.i.cs  InformationView.baml  InformationView.g.i.cs  ReviewSystemView.baml  ReviewSystemView.g.cs  ToDoListView.baml  ToDoListView.g.i.cs  TodolistReminder.g.cs  listboxitemlist.baml
build-artifacts/obj-Release/Theme/: MenuButtonTheme.baml
docs/: algorithm.md  architecture.md
source-reconstruction/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  Review_Reminder.csproj  Review_Reminder.sln
source-reconstruction/MVVM/Model/: EbbinghausCurve.cs  ReviewItem.cs  ReviewSchedule.cs
source-reconstruction/MVVM/View/: CalendarView.xaml  CalendarView.xaml.cs  HomeView.xaml  HomeView.xaml.cs  InformationView.xaml  InformationView.xaml.cs  ReviewSystemView.xaml  ReviewSystemView.xaml.cs  ToDoListView.xaml  ToDoListView.xaml.cs  TodolistReminder.xaml  TodolistReminder.xaml.cs
source-reconstruction/MVVM/ViewModel/: BaseViewModel.cs  CalendarViewModel.cs  HomeViewModel.cs  InformationViewModel.cs  MainViewModel.cs  ReviewSystemViewModel.cs  ToDoListViewModel.cs
source-reconstruction/Services/: INotificationService.cs  IReviewScheduler.cs  NotificationService.cs  ReviewScheduler.cs
source-reconstruction/Theme/: MenuButtonTheme.xaml
src/ebbinghaus_reviewer/: __init__.py  algorithm.py  cli.py  models.py  scheduler.py  storage.py
src/ebbinghaus_reviewer/web/: __init__.py  app.py  server.py
src/ebbinghaus_reviewer/web/templates/: base.html  cards.html  index.html  list.html  new.html  review.html  review_done.html  stats.html
tests/: conftest.py  test_algorithm.py  test_cli.py  test_scheduler.py  test_server.py  test_storage.py  test_web.py
