[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebbinghaus-reviewer"
version = "0.1.0"
description = "A spaced-repetition study reviewer grounded in the Ebbinghaus forgetting curve"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "jumincho" }]
keywords = ["spaced-repetition", "ebbinghaus", "study", "flashcards", "sm-2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
ebbinghaus = "ebbinghaus_reviewer.cli:cli"

[project.urls]
Repository = "https://github.com/jumincho/ebbinghaus-reviewer"

[tool.hatch.build.targets.wheel]
packages = ["src/ebbinghaus_reviewer"]

# Ensure Jinja templates ship with the wheel (hatch picks up .py files
# by default but not arbitrary data files).
[tool.hatch.build.targets.wheel.force-include]
"src/ebbinghaus_reviewer/web/templates" = "ebbinghaus_reviewer/web/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/ebbinghaus_reviewer"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
